--- a/sini/templates/sini/warning/warning_detail.html
+++ b/sini/templates/sini/warning/warning_detail.html
@@ -353,7 +353,7 @@
   </div>
   </div>
 
-  <div class="modal fade"
+<div class="modal fade"
   id="crearIncidenciaModal"
   tabindex="-1"
   role="dialog"
@@ -400,7 +400,7 @@
   </div>
 </div>
 </div>
-</div>0
+</div>
 
     <div class="modal fade"
     id="errorModal"
