--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -20,6 +20,11 @@
   <link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="/static/assets/img/favicon.png">
 
+  <meta http-equiv="Expires" content="0">
+  <meta http-equiv="Last-Modified" content="0">
+  <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  
   <title>
     Django Soft Dashboard PRO - {% block title %}{% endblock %} | AppSeed
   </title>
