activar y archivar avisos e incidencias finalizar incidensia

--- a/sini/templates/sini/incidence/incidence_form.html
+++ b/sini/templates/sini/incidence/incidence_form.html
@@ -111,7 +111,7 @@
                 {{ form.priority }}
               </div>
             </div>
-            <div class="col-3">
+            <!--div class="col-3">
               <div class="form-group">
                 <h6>
                   {{ form.active.label }}
@@ -119,7 +119,7 @@
                 </h6>
                 <div class="form-check">{{ form.active }}</div>
               </div>
-            </div>
+            </div-->
           </div>
 
           <div class="row">
