--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -26,7 +26,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   
   <title>
-    Django Soft Dashboard PRO - {% block title %}{% endblock %} | AppSeed
+    SINI - {% block title %}{% endblock %} | AppSeed
   </title>
 
   <!--     Fonts and icons     -->
