--- a/sini/templates/sini/incidence/incidence_detail.html
+++ b/sini/templates/sini/incidence/incidence_detail.html
@@ -62,7 +62,74 @@
             </div>
           </div>
         </div>
-        <div class="card card-body mt-4">
+        <div class="card card-body mt-2">
+          <div class="row">
+            <div class="col-lg-6 col-md-6 my-sm-auto ms-sm-auto me-sm-0 mx-auto mt-3 d-flex justify-content-start mr-3">
+              
+            {% if incidence.status != 'finalizado' %}
+              <form id="filter_form"
+              action="{% url 'sini:incidence_finalize' incidence.id %}"
+              class=""
+              method="post"
+              autocomplete="off">
+              {% csrf_token %}
+                
+                <button class="btn btn-danger btn-large btn-sm mx-1 mb-0"
+                  type="submit"
+                  id="finalizarB"
+                  value="finalizar">&nbsp;&nbsp;Finalizar
+                </button>
+               
+              </form>
+              {% endif %}
+              {% if incidence.active%}
+                <form id="archive_form"
+                action="{% url 'sini:incidence_archive_incidence' incidence.id %}"
+                class=""
+                method="post"
+                autocomplete="off">
+                {% csrf_token %}
+                  
+                  <button class="btn btn-danger btn-large btn-sm mx-1 mb-0"
+                    type="submit"
+                    id="archivarB"
+                    value="archivar">&nbsp;&nbsp;Archivar
+                  </button>
+                
+                </form>
+              {% else %}
+              <form id="ctivate_form"
+              action="{% url 'sini:incidence_activate' incidence.id %}"
+              class=""
+              method="post"
+              autocomplete="off">
+              {% csrf_token %}
+                
+                <button class="btn btn-danger btn-large btn-sm mx-1 mb-0"
+                  type="submit"
+                  id="archivarB"
+                  value="archivar">&nbsp;&nbsp;Activar
+                </button>
+               
+              </form>
+
+              {% endif %}
+            </div>
+            <div class="col-3">
+               <strong>Estado: </strong>{{incidence.get_status_display}}
+            </div>  
+            <div class="col-3">
+              <strong>Activo: </strong>                
+              {% if incidence.active %}
+              <span class="badge badge-success">SI</span>
+              {% else %}
+              <span class="badge badge-danger">NO</span>
+              {% endif %}
+           </div>  
+          </div>  
+
+        </div>
+        <div class="card card-body mt-1">
           <!--h6 class="mb-0">New Project</h6>
 <p class="text-sm mb-0">Create new project</p-->
           <div class="row mb-2">
@@ -78,42 +145,30 @@
                 <div class="mr-2">{% firstof incidence.get_incidence_type_display|default_if_none:"-" %}</div>
               </div>
             </div>
-            <div class="col-3">
+            <!--div class="col-3">
               <div class="form-group">
                 <h6>Status</h6>
                 <div class="mr-2">{% firstof incidence.get_status_display|default_if_none:"-" %}</div>
               </div>
-            </div>
+            </div-->
             <div class="col-3">
               <div class="form-group">
                 <h6>Creado por</h6>
                 <div class="mr-2">{% firstof incidence.created_by|default_if_none:"-" %}</div>
               </div>
             </div>
-            
-          </div>
-          <div class="row">
             <div class="col-3">
               <div class="form-group">
                 <h6>Fecha creación</h6>
                 <div class="mr-2">{% firstof incidence.created|default_if_none:"-" %}</div>
               </div>
             </div>
-            <div class="col-3">
-              <div class="form-group">
-                <h6>Activo</h6>
-                {% if incidence.active %}
-                <div class="mr-2"><span class="badge badge-success">SI</span></div> 
-                {% else %}
-                <div class="mr-2"><span class="badge badge-danger">NO</span></div>
-                {% endif %}
-               
-              </div>
-            </div>
+            
+          </div>
+
 
           
-          
-          </div>
+
           <div class="row">
             <div class="col-12">
               <div class="form-group">
