--- a/sini/templates/sini/incidence/incidence_detail2.html
+++ b/sini/templates/sini/incidence/incidence_detail2.html
@@ -14,6 +14,7 @@
  #gis {
      width:100%;
      height:400px;
+     margin-top:0;
      }
   .clickable{
       cursor: pointer;
@@ -28,10 +29,10 @@
       <div class="col-lg-12 col-12 mx-auto">
 
         <div class="card mt-0" id="geo">
-          <div class="card-header">
-            <h5>Manejo incidencias</h5>
+          <div class="card-header mb-0">
+            <h5 class="mb-0">Manejo incidencias</h5>
           </div>
-          <div class="card-body d-sm-flex pt-0">{% leaflet_map "gis" callback="window.init_map" %}</div>
+          <div class="card-body d-sm-flex p-0 mt-0 pt-0">{% leaflet_map "gis" callback="window.init_map" %}</div>
         </div>
 
         <input type="hidden" id="selectedWarning" name="selectedWarningName"/>
@@ -124,47 +125,7 @@ aria-hidden="true">
       </div>
       </div>
 
-      <div class="modal fade"
-      id="createdSuccessModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">
-          Incidencia creada
-        </h5>
-        <button type="button"
-                class="btn-close text-dark"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-                id="cerrarModal">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div  class="row">
-          <div class="col-2 text-center text-success">
-            <i class="fa fa-3x fa-thumbs-up"></i>
-           </div>
-           <div class="col-10">
-            <p class="text-sm mb-0 font-weight-bold">
-               Se ha creado con éxito la incidencia a partir del aviso seleccionado<br>
-            </p>
-            
-           </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn bg-success text-white" data-bs-dismiss="modal">
-          Cerrar
-        </button>
-      </div>
-      </div>
-      </div>
-      </div>
+    
 
 
 
