archivar y finlizar incidencia

--- a/apps/templates/layouts/base-rtl.html
+++ b/apps/templates/layouts/base-rtl.html
@@ -21,7 +21,7 @@
   <link rel="icon" type="image/png" href="/static/assets/img/favicon.png">
 
   <title>
-    Django Soft Dashboard PRO - {% block title %}{% endblock %} | AppSeed
+    SINI - {% block title %}{% endblock %} 
   </title>
   
   <!--     Fonts and icons     -->
