--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -26,7 +26,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   
   <title>
-    SINI - {% block title %}{% endblock %} | AppSeed
+    SINI - {% block title %}{% endblock %}
   </title>
 
   <!--     Fonts and icons     -->
@@ -56,7 +56,7 @@
 
   </main>
 
-  {% include "includes/fixed-plugin.html" %}
+  {#% include "includes/fixed-plugin.html" %#}
   
   {% include "includes/scripts.html" %}  
 
