--- a/sini/templates/sini/api_user/api_user_activate.html
+++ b/sini/templates/sini/api_user/api_user_activate.html
@@ -51,7 +51,7 @@
             
 
 
-              <button type="button" class="btn bg-gradient-warning mt-4 fadeIn2 fadeInBottom">Go to Homepage</button>
+              <!--button type="button" class="btn bg-gradient-warning mt-4 fadeIn2 fadeInBottom">Go to Homepage</button-->
             </div>
             <div class="col-lg-2 my-auto">
             </div>
