--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -19,9 +19,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5 text-center mx-auto">
-            <h1 class="text-white mb-2 mt-5">Django Soft PRO</h1>
+            <h1 class="text-white mb-2 mt-5">Sistema SINI</h1>
             <p class="text-lead text-white">
-              Premium Seed project built in Django. 
+              Sistema de gestión de riesgos. 
             </p>
           </div>
         </div>
@@ -33,14 +33,14 @@
           <div class="card z-index-0">
             <div class="card-header text-center pt-4">
               <h5>
-                Sign IN                 
+                Autenticarse   
               </h5>
             </div>
             <div class="mb-2 position-relative text-center">
                 {% if msg %}
                       {{ msg | safe }}
                   {% else %}
-                      Add your credentials
+                    Suministre sus credenciales
                 {% endif %}
             </div>
             <div class="card-body">
@@ -54,21 +54,21 @@
                 <div class="mb-3">
                   {{ form.password }}
                 </div>
-                <div class="form-check form-switch">
+                <!--div class="form-check form-switch">
                   <input class="form-check-input" type="checkbox" id="rememberMe">
                   <label class="form-check-label" for="rememberMe">Remember me</label>
-                </div>
+                </div-->
                 <div class="text-center">
                   <button type="submit" name="login" class="btn bg-gradient-info w-100 my-4 mb-2">Sign in</button>
                 </div>
-                <div class="mb-2 position-relative text-center">
+                <!--div class="mb-2 position-relative text-center">
                   <p class="text-sm font-weight-bold mb-2 text-secondary text-border d-inline z-index-2 bg-white px-3">
                     or
                   </p>
                 </div>
                 <div class="text-center">
                   <a href="{% url 'register' %}" class="btn bg-gradient-dark w-100 mt-2 mb-4">Sign up</a>
-                </div>
+                </div-->
               </form>
             </div>
           </div>
