--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -3,19 +3,19 @@
         <div class="row align-items-center justify-content-lg-between">
           <div class="col-lg-6 mb-lg-0 mb-4">
             <div class="copyright text-center text-sm text-muted text-lg-start">
-              &copy; <a target="_blank" href="https://bit.ly/3fKQZaL">Creative Tim</a> - coded by AppSeed.
+              &copy; <a target="_blank" href="#">Deneb 2023</a> - Todos los derechos reservados.
             </div>
           </div>
           <div class="col-lg-6">
             <ul class="nav nav-footer justify-content-center justify-content-lg-end">
               <li class="nav-item">
-                <a href="https://bit.ly/3fKQZaL" class="nav-link text-muted" target="_blank">Creative Tim</a>
+                <a href="#" class="nav-link text-muted" target="_blank">Acerca de</a>
               </li>
               <li class="nav-item">
-                <a href="https://appseed.us/support" class="nav-link text-muted" target="_blank">Support</a>
+                <a href="#" class="nav-link text-muted" target="_blank">Soporte</a>
               </li>
               <li class="nav-item">
-                <a href="https://appseed.us/product/django-soft-ui-dashboard" class="nav-link text-muted" target="_blank">Free Version</a>
+                <a href="#" class="nav-link text-muted" target="_blank">Más información</a>
               </li>
             </ul>
           </div>
