--- a/apps/templates/includes/navigation-error.html
+++ b/apps/templates/includes/navigation-error.html
@@ -1,7 +1,7 @@
 <div class="container">
-      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="/">
+      <!--a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="/">
         Soft UI Dashboard PRO
-      </a>
+      </a-->
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon mt-2">
           <span class="navbar-toggler-bar bar1"></span>
@@ -13,11 +13,11 @@
         <ul class="navbar-nav navbar-nav-hover mx-auto">
         </ul>
         <ul class="navbar-nav d-lg-block d-none">
-          <li class="nav-item">
+          <!--li class="nav-item">
             <a target="_blank" 
                href="https://www.creative-tim.com/product/soft-ui-dashboard-pro" 
                class="btn btn-sm  bg-gradient-dark  btn-round mb-0 me-1">Buy Now</a>
-          </li>
+          </li-->
         </ul>
       </div>
     </div>
