--- a/apps/templates/includes/navigation-old.html
+++ b/apps/templates/includes/navigation-old.html
@@ -1,6 +1,6 @@
     <nav class="navbar navbar-main navbar-expand-lg position-sticky mt-4 top-1 px-0 mx-4 shadow-none border-radius-xl z-index-sticky" id="navbarBlur" data-scroll="true">
       <div class="container-fluid py-1 px-3">
-        <!--nav aria-label="breadcrumb">
+        <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
             <li class="breadcrumb-item text-sm">
               <a class="opacity-3 text-dark" href="javascript:;">
@@ -23,7 +23,7 @@
             <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Default</li>
           </ol>
           <h6 class="font-weight-bolder mb-0">Default</h6>
-        </nav-->
+        </nav>
         <div class="sidenav-toggler sidenav-toggler-inner d-xl-block d-none ">
           <a href="javascript:;" class="nav-link text-body p-0">
             <div class="sidenav-toggler-inner">
@@ -35,27 +35,22 @@
         </div>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
-            <!--div class="input-group">
+            <div class="input-group">
               <span class="input-group-text text-body"><i class="fas fa-search" aria-hidden="true"></i></span>
               <input type="text" class="form-control" placeholder="Type here...">
-            </div-->
+            </div>
           </div>
           <ul class="navbar-nav  justify-content-end">
             <li class="nav-item d-flex align-items-center">
               
-              <a  href="{% url 'admin:index' %}"
-              class="nav-link text-body font-weight-bold px-0 mx-5">
-             <i class="fa fa-gear me-sm-1"></i>
-             <span class="d-sm-inline d-none">Administración</span>
-           </a>
               <a href="{% url 'logout' %}" 
                  class="nav-link text-body font-weight-bold px-0">
                 <i class="fa fa-user me-sm-1"></i>
-                <span class="d-sm-inline d-none">Salir</span>
+                <span class="d-sm-inline d-none">LOGOUT</span>
               </a>
 
             </li>
-            <!--li class="nav-item d-xl-none ps-3 d-flex align-items-center">
+            <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">
                 <div class="sidenav-toggler-inner">
                   <i class="sidenav-toggler-line"></i>
@@ -63,13 +58,13 @@
                   <i class="sidenav-toggler-line"></i>
                 </div>
               </a>
-            </li-->
-            <!--li class="nav-item px-3 d-flex align-items-center">
+            </li>
+            <li class="nav-item px-3 d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-body p-0">
                 <i class="fa fa-cog fixed-plugin-button-nav cursor-pointer"></i>
               </a>
-            </li-->
-            <!--li class="nav-item dropdown pe-2 d-flex align-items-center">
+            </li>
+            <li class="nav-item dropdown pe-2 d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-body p-0" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="fa fa-bell cursor-pointer"></i>
               </a>
@@ -141,7 +136,7 @@
                   </a>
                 </li>
               </ul>
-            </li-->
+            </li>
           </ul>
         </div>
       </div>
