--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -4,7 +4,7 @@
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href="/">
         <img src="/static/assets/img/logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="ms-1 font-weight-bold">Soft UI Dashboard PRO</span>
+        <span class="ms-1 font-weight-bold">SINI</span>
       </a>
     </div>
     <hr class="horizontal dark mt-0">
@@ -436,7 +436,7 @@
             </ul>
           </div>
         </li>
-        <li class="nav-item">
+        <!--li class="nav-item">
           <hr class="horizontal dark" />
           <h6 class="ps-4  ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Support</h6>
         </li>
@@ -460,10 +460,10 @@
             </div>
             <span class="nav-link-text ms-1">Documentation</span>
           </a>
-        </li>
+        </li-->
       </ul>
     </div>
-    <div class="sidenav-footer mx-3 mt-3 pt-3">
+    <!--div class="sidenav-footer mx-3 mt-3 pt-3">
       <div class="card card-background shadow-none card-background-mask-secondary" id="sidenavCard">
         <div class="full-background" style="background-image: url('/static/assets/img/curved-images/white-curved.jpeg')"></div>
         <div class="card-body text-start p-3 w-100">
@@ -477,6 +477,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </div-->
   </aside>
   
