--- a/sini/templates/sini/incidence/incidence_managment.html
+++ b/sini/templates/sini/incidence/incidence_managment.html
@@ -71,7 +71,7 @@
         </div>
         <div class="card mt-0" id="geo">
           <div class="card-header mb-0">
-            <h5 class="mb-0">Manejo incidencias</h5>
+            <h5 class="mb-0">Manejo Avisos</h5>
           </div>
           <div class="card-body d-sm-flex p-2 mt-0 pt-2">
             <div class="table-responsive" style="width:100%">
@@ -128,14 +128,14 @@
                           </button>
                       </span>
 
-                    <span data-bs-toggle="modal" data-bs-target="#tossModal">
+                    <span data-bs-toggle="modal" data-bs-target="#DescartarAvisoModal">
                       <button class="btn btn-link text-primary text-gradient px-0 mb-0 executebutton mx-2"
                           id="asignar"
-                          onclick="clicked_tosst(event)"
+                          onclick="clicked_toss(event)"
                           data-bs-toggle="tooltip"
                           data-bs-placement="top" title="Desechar aviso"
                           value="{{mobile_waring.id}}">
-                          <i id="tossicon_{{mobile_waring.id}}" class="fa fa-eraser fa-2x" aria-hidden="true"></i>
+                          <i id="tossbutton_{{mobile_waring.id}}" class="fa fa-eraser fa-2x" aria-hidden="true"></i>
                         </button>
                     </span>
 
