--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -429,10 +429,18 @@
             <ul class="nav ms-4 ps-3">
               <li class="nav-item ">
                 <a class="nav-link {% if 'api_user' in segment %} active {% endif %}" href="{% url 'sini:api_user_list' %}">
-                  <span class="sidenav-mini-icon"> D </span>
+                  <span class="sidenav-mini-icon"> U </span>
                   <span class="sidenav-normal"> Usuarios móviles </span>
                 </a>
               </li>
+              <li class="nav-item ">
+                <a class="nav-link {% if 'notification' in segment %} active {% endif %}" href="{% url 'sini:notification_list' %}">
+                  <span class="sidenav-mini-icon"> N </span>
+                  <span class="sidenav-normal"> Notificaciones </span>
+                </a>
+              </li>
+
+              
             </ul>
           </div>
         </li>
