ver fotografias en vista detalles

--- a/sini/templates/sini/incidence/incidence_form.html
+++ b/sini/templates/sini/incidence/incidence_form.html
@@ -138,7 +138,7 @@
 
         <div class="card mt-4" id="geo_card">
           <div class="card-header">
-            <h5>Archivos {% if form.geom.field.required %}{% endif %}</h5>
+            <h5>Fotografías y Arhivos {% if form.geom.field.required %}{% endif %}</h5>
           </div>
           <div class="card-body">
             <div class="row mb-2">
