--- a/sini/templates/sini/warning/warning_form.html
+++ b/sini/templates/sini/warning/warning_form.html
@@ -124,7 +124,7 @@
 
         <div class="card mt-4" id="geo_card">
           <div class="card-header">
-            <h5>Archivos {% if form.geom.field.required %}<span>*</span>{% endif %}</h5>
+            <h5>Fotografías y Archivos {% if form.geom.field.required %}<span>*</span>{% endif %}</h5>
           </div>
           <div class="card-body">
             <div class="row mb-2">
