--- a/sini/templates/sini/warning/warning_detail.html
+++ b/sini/templates/sini/warning/warning_detail.html
@@ -232,45 +232,58 @@
             </div>          
           </div>
         </div>
+        <div class="card mt-4" id="fotografias">
+          <div class="card-header">
+            <h5>Fotográfias</h5>
+          </div>
+          <div class="card card-body">
+            <div class="row">
+              <div class="col-4">
+                <div class="form-group">
+                  <h6>Foto 1</h6>
+                  {% if warning.image1 %}
+                  <!--div class="mr-2"><a href="{{warning.image1.url }}"  target="_blank">Descargar <i class="fa fa-download"></i></a></div-->
+                  <img class="col-lg-12" src="{{warning.image1.url}}">
+                  {% else %}
+                  <div class="mr-2">-</div>
+    
+                  {% endif %}
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="form-group">
+                  <h6>Foto 2</h6>
+                  {% if warning.image2 %}
+                  <!--div class="mr-2"><a href="{{warning.image2.url }}"  target="_blank">Descargar <i class="fa fa-download"></i></a></div-->
+                  <img class="col-lg-12" src="{{warning.image2.url}}">
+                  {% else %}
+                  <div class="mr-2">-</div>
+    
+                  {% endif %}
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="form-group">
+                  <h6>Foto 3</h6>
+                  {% if warning.image3 %}
+                  <!--div class="mr-2"><a href="{{warning.image3.url }}" target="_blank">Descargar <i class="fa fa-download"></i></a></div-->
+                  <img class="col-lg-12" src="{{warning.image3.url}}">
+                  {% else %}
+                  <div class="mr-2">-</div>
+    
+                  {% endif %}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="card mt-4" id="archivos">
           <div class="card-header">
             <h5>Archivos</h5>
           </div>
           <div class="card card-body">
             <div class="row">
-              <div class="col-3">
-                <div class="form-group">
-                  <h6>Imagen 1</h6>
-                  {% if warning.image1 %}
-                  <div class="mr-2"><a href="{{warning.image1.url }}"  target="_blank">Descargar <i class="fa fa-download"></i></a></div>
-                  {% else %}
-                  <div class="mr-2">-</div>
-    
-                  {% endif %}
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="form-group">
-                  <h6>Imagen 2</h6>
-                  {% if warning.image2 %}
-                  <div class="mr-2"><a href="{{warning.image2.url }}"  target="_blank">Descargar <i class="fa fa-download"></i></a></div>
-                  {% else %}
-                  <div class="mr-2">-</div>
-    
-                  {% endif %}
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="form-group">
-                  <h6>Imagen 3</h6>
-                  {% if warning.image3 %}
-                  <div class="mr-2"><a href="{{warning.image3.url }}" target="_blank">Descargar <i class="fa fa-download"></i></a></div>
-                  {% else %}
-                  <div class="mr-2">-</div>
-    
-                  {% endif %}
-                </div>
-              </div>
+
               <div class="col-3">
                 <div class="form-group">
                   <h6>Audio</h6>
@@ -282,8 +295,6 @@
                   {% endif %}
                 </div>
               </div>
-            </div>
-            <div class="row">
               <div class="col-3">
                 <div class="form-group">
                   <h6>Video</h6>
