--- a/sini/templates/sini/notification/notification_detail.html
+++ b/sini/templates/sini/notification/notification_detail.html
@@ -45,18 +45,18 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-6 my-sm-auto ms-sm-auto me-sm-0 mx-auto mt-3 d-flex justify-content-end">
-              <a href="{% url 'sini:incidence_list' %}"
+              <a href="{% url 'sini:notification_list' %}"
                  class="btn btn-secondary btn-large btn-sm m-b-xm mx-1"><i class="fa fa-arrow-left"></i>&nbsp;&nbsp;Atrás</a>
-              <a href="{% url 'sini:incidence_create' %}"
-                 class="btn btn-primary btn-large btn-sm m-b-xm mx-1"><i class="fa fa-plus"></i>&nbsp;&nbsp;Crear</a>
+              <!--a href="{% url 'sini:incidence_create' %}"
+                 class="btn btn-primary btn-large btn-sm m-b-xm mx-1"><i class="fa fa-plus"></i>&nbsp;&nbsp;Crear</a-->
               <!--a class="btn btn-danger btn-large btn-sm m-b-xm"><i class="fa fa-edit"></i>&nbsp;&nbsp;Eliminar</a-->
-              <button class="btn btn-danger btn-large btn-sm m-b-xm mx-1"
+              <!--button class="btn btn-danger btn-large btn-sm m-b-xm mx-1"
                       id="eliminarB"
                       data-bs-toggle="modal"
                       data-bs-target="#deleteModal"
                       value="{{ incidence.id }}">
                 <i class="far fa-trash-alt me-2" aria-hidden="true"></i>&nbsp;&nbsp;Eliminar
-              </button>
+              </button-->
             </div>
           </div>
         </div>
@@ -82,19 +82,19 @@
             <div class="col-3">
               <div class="form-group">
                 <h6>Enviar a</h6>
-                <div class="mr-2">{% firstof notification.send_to|default_if_none:"-" %}</div>
+                <div class="mr-2">{% firstof notification.get_send_to_display|default_if_none:"-" %}</div>
               </div>
             </div>
             <div class="col-3">
               <div class="form-group">
                 <h6>Usuario</h6>
-                <div class="mr-2">{% firstof incidence.api_user|default_if_none:"-" %}</div>
+                <div class="mr-2">{% firstof notification.api_user|default_if_none:"-" %}</div>
               </div>
             </div>
             <div class="col-3">
               <div class="form-group">
                 <h6>Grupo</h6>
-                <div class="mr-2">{% firstof incidence.api_group|default_if_none:"-" %}</div>
+                <div class="mr-2">{% firstof notification.api_group|default_if_none:"-" %}</div>
               </div>
             </div>
     
@@ -131,90 +131,35 @@
           <div class="card-body d-sm-flex pt-0">{% leaflet_map "gis" callback="window.our_layers" %}</div>
         </div>
 
-
-
-
-
-    <div class="modal fade"
-         id="deleteModal"
-         tabindex="-1"
-         role="dialog"
-         aria-labelledby="exampleModalLabel"
-         aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Eliminar
-            </h5>
-            <button type="button"
-                    class="btn-close text-dark"
-                    data-bs-dismiss="modal"
-                    aria-label="Close"
-                    id="elim">
-              <span aria-hidden="true">&times;</span>
-            </button>
+        <div class="card mt-4" id="geo">
+          <div class="card-header">
+            <h5>Estado</h5>
           </div>
-          <div class="modal-body">
-            <p class="text-sm mb-0 font-weight-bold">
-              ¿Está seguro de que desea eliminar la incidencia?
-            </p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn bg-success" data-bs-dismiss="modal">
-              Cerrar
-            </button>
-            <button type="button" class="btn bg-danger text-white" id="aceptar">
-              Aceptar
-            </button>
+          <div class="card-body">
+            <div class="row mb-2">
+              <div class="col-6">
+                <div class="form-group">
+                  <h6>Estado</h6>
+                  <div class="mr-2">{% firstof notification.get_status_display|default_if_none:"-" %}</div>
+                </div>
+              </div>
+              
+            </div>
+  
+            <div class="row">
+              <div class="col-12">
+                <div class="form-group">
+                  <h6>Descripción</h6>
+                  <div class="mr-2">{% firstof notification.status_description|safe|default_if_none:"-"|linebreaks  %}</div>
+                </div>
+              </div>          
+            </div>
           </div>
         </div>
-      </div>
-    </div>
 
-    <div class="modal fade"
-    id="errorModal"
-    tabindex="-1"
-    role="dialog"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-     <div class="modal-header">
-       <h5 class="modal-title" id="exampleModalLabel">
-         Error</span>
-       </h5>
-       <button type="button"
-               class="btn-close text-dark"
-               data-bs-dismiss="modal"
-               aria-label="Close"
-               id="closemodalerror">
-    
-         <span aria-hidden="true">&times;</span>
-       </button>
-     </div>
-     <div class="modal-body">
-       <div  class="row">
-         <div class="col-2 text-center text-danger">
-           <i class="fa fa-3x fa-exclamation-circle "></i>
-          </div>
-          <div class="col-10">
-           <p class="text-sm mb-0 font-weight-bold">
-              Han ocurrido errores al eliminar <br>
-              <span id="errorspan"></span>
-           </p>
-           
-          </div>
-       </div>
-     </div>
-     <div class="modal-footer">
-       <button type="button" class="btn bg-success text-white" data-bs-dismiss="modal" >
-         Cerrar
-       </button>
-     </div>
-    </div>
-    </div>
-  </div>
+
+
+
 
  
 </div>
